# Point_Cloud_Registration

./: .gitignore  GoICPWrapper.m  GoICP_config.cfg  Go_ICP_Time_Test.m  README.md  Sanity.m  bunny_test.m  changing_epsilon.m  changing_epsilon_test.m  changing_iteration_num.m  compare_script.m  extractRelevantPartFromGlobalCloud.m  general_print.m  getCloudsRMSE.m  getTransformationDiff.m  gicpWrapper.m  noise_test.m  pcregrigid_v3.m  runMatlabICP.m  unitTransform.m  writeGoICPCfgFile.m
Database/: Local2Global_Coarse.csv  Local2Global_GT.csv
Database/Local_Clouds/: 001.ply  002.ply  003.ply  004.ply  005.ply  006.ply  007.ply  008.ply  009.ply  010.ply  011.ply  012.ply  013.ply  014.ply  015.ply  016.ply  017.ply  018.ply  019.ply  020.ply  021.ply  022.ply  023.ply  024.ply
GICP_VS/GICP_VS/: GICP_VS.sln
GICP_VS/GICP_VS/Code/: ANN.cpp  ANNx.h  gicp.h  gicp_matlab.cpp  optimize.h  transform.cpp
GICP_VS/GICP_VS/Debug/: GICP_VS.exp  GICP_VS.lib
GICP_VS/GICP_VS/GICP_VS/: GICP_VS.vcxproj  GICP_VS.vcxproj.filters
GICP_VS/GICP_VS/GICP_VS/Debug/: vc141.idb
GICP_VS/GICP_VS/GICP_VS/Debug/GICP_VS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GICP_VS.lastbuildstate  GICP_VS.write.1u.tlog
GICP_VS/GICP_VS/GICP_VS/x64/Debug/: vc141.idb
GICP_VS/GICP_VS/x64/Debug/: GICP_VS.exp  GICP_VS.lib
Go_ICP/: CMakeLists.txt  def_file.def  jly_goicp.h  matrix.cpp  matrix.h  mex_main.cpp
VS_GICP/: CMakeLists.txt  def_file.def  gicp_main.cpp
gicp_matlab/: build_script.m  gicp.cpp  gicp.h  gicp_matlab.cpp  mex_C++_mingw-w64.xml  tags  tags.idx  transform.cpp
(+4 files in other folders)
